--- a/Professionals/css/professionals.css
+++ b/Professionals/css/professionals.css
@@ -1,3 +1,7 @@
+.professionals-wrapper {
+    padding: 3% 0;
+}
+
 .rows-container {
     margin-top: 5%;
     margin: 0 auto;
@@ -15,11 +19,12 @@
 }
 
 .professionals-card {
+    min-width: 300px;
     transition: box-shadow .3s ease;
     border-radius: 5px;
     border: 1px solid #ccc;
     padding: 0 0 0 0;
-    margin: 0 2.5vw auto;
+    margin: 3vw 1.5vw auto;
     /* border: 1px solid black; */
     background-color: white;
 }
