--- a/Static/css/settings.css
+++ b/Static/css/settings.css
@@ -1,3 +1,15 @@
-.content-wrapper {
-    margin-top: 5%;
+@media screen and (max-width: 799px) {
+    .content-wrapper {
+        max-width: 500px;
+        margin: auto;
+        margin-top: 20vw;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .content-wrapper {
+        max-width: 500px;
+        margin: auto;
+        margin-top: 5vw;
+    }
 }
