--- a/Professionals/css/professionals.css
+++ b/Professionals/css/professionals.css
@@ -171,3 +171,45 @@
     padding: 0.5rem;
     margin: auto;
 }
+
+.single-row-container {
+    margin: auto;
+    width: 99vw;
+    /* border: 1px solid violet; */
+    color: rgba(0, 0, 0, 0);
+    text-shadow: 0 0 black;
+    overflow-y: auto;
+    overflow-x: scroll;
+    transition: color .3s ease;
+    position: relative;
+}
+
+.single-row-container:hover {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.single-row-container::-webkit-scrollbar-corner {
+    /* background-color: rgba(0, 0, 0, 0); */
+    display: none;
+}
+
+.single-row-container::-webkit-scrollbar,
+.single-row-container::-webkit-scrollbar-thumb {
+  width: 27px;
+  border-radius: 13px;
+  /* background-clip: padding-box; */
+  /* border: 10px solid transparent; */
+  display: block;
+  height: 15px;
+  transition: .3s ease;
+}
+
+.single-row-container:hover::-webkit-scrollbar-track {
+    background-color: rgba(200, 200, 200, 0.5);
+    border-radius: 10px;
+    transition: .3s ease;
+}
+
+.single-row-container::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 0 10px;
+}
