--- a/Chat/selection/css/custom.css
+++ b/Chat/selection/css/custom.css
@@ -45,3 +45,38 @@
 .time_received {
     margin: 5px 5px 5px 0;
 }
+
+.user-pic-fig {
+	margin: 0 1rem 0 0;
+    overflow-x: hidden;
+    overflow-y: hidden;
+	border-radius: 50%;
+    text-align: center;
+    min-height: 6rem;
+    min-width: 6rem;
+	max-height: 6rem;
+    max-width: 6rem;
+    /* height: 7rem;
+    width: 7rem; */
+	/* width: 5rem;
+	height: 5rem; */
+}
+
+.user-pic-span {
+	display: block;
+    /* max-height: 10rem; */
+    /* height: 7rem;
+    width: 7rem; */
+	/* height: 5rem;
+	width: 5rem; */
+}
+
+.user-pic-img {
+    overflow-y: hidden;
+	overflow-x: hidden;
+	width: 100% !important;
+	max-height: 10rem;
+	height: 6rem !important;
+	object-fit: cover;
+    display: inline-block !important;
+}
