services applications fix, upload db sql file

--- a/Homepage/css/login.css
+++ b/Homepage/css/login.css
@@ -34,7 +34,7 @@
 }
 
 .login-input {
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2) !important;
 }
 
 .login-button-container {
