--- a/Services/css/services.css
+++ b/Services/css/services.css
@@ -1,5 +1,5 @@
 .services-wrapper {
-    /* padding: 10% 0 10% 0; */
+    padding: 10% 0 10% 0;
     height: 100vh;
     width: 100vw;
     /* background-color: #f2f3f5; */
